@@ -1,6 +1,7 @@
 v3.0.1 (01/04/2021)
-- 4K screensavers available
-- Day Night toggle removed
+- 4K, HDR, and HEVC versions available
+- New scenes added (ISS, undersea, recolored, extended)
+- Day/night toggle removed, Apple no longer supports this
 
 v3.0.0  (13/03/2021)
 - Transition to python 3
